feat: implement new product filter option
